[package]
name = "wise_key"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[dependencies]
#global
image = { version = "*", features = ["jpeg", "png"] }
pollster = "*"

#about gui
egui = "*"
egui_extras = { version = "*", features = ["default", "all_loaders"] }
egui-wgpu = "*"
eframe = { version = "*", features = ["default", "__screenshot", "wgpu"] }

#database
sqlite = "*"

#inputs record and simulate
rdev = { git = "https://github.com/qzd1989/rdev", features = ["unstable_grab"] }

#global
lazy_static = "*"

#embed code, internal supports channel message, only_i32 supports register generic fn
rhai = { version = "*", features = ["internals", "only_i32"] }

#clipboard
arboard = "*"

#channel support
crossbeam-channel = "*"

#log
env_logger = "*"
log = "*"

#capture display/window streaming to bitmap/texture
wgpu = { version = "*" }
crabgrab = { version = "*", features = ["wgpu", "bitmap"] }
